--- a/zuperPortfolioPrace/5/index.html
+++ b/zuperPortfolioPrace/5/index.html
@@ -160,28 +160,38 @@
         <section class="product__iframes">
 
           <!-- iframe and label -->
-          <section class="product__iframe product__iframe--first">
-            <video class="iframe">
-              <source src="mp4/1.mp4" type="video/mp4">
-            </video>
+          <article class="video__wrapper">
+            <section class="product__iframe">
+              <video class="iframe">
+                <source src="mp4/1.mp4" type="video/mp4">
+              </video>
+            </section>
             <span class="product__label">Innovative Design</span>
-          </section>
+
+          </article>
+
 
           <!-- iframe and label -->
-          <section class="product__iframe product__iframe--second">
-            <video class="iframe">
-              <source src="mp4/2.mp4" type="video/mp4">
-            </video>
-            <span class="product__label">High-level Skills</span>
-          </section>
+          <article class="video__wrapper">
+            <section class="product__iframe">
+              <video class="iframe">
+                <source src="mp4/2.mp4" type="video/mp4">
+              </video>
+            </section>
+            <span class="product__label">Innovative Design</span>
+
+          </article>
 
           <!-- iframe and label -->
-          <section class="product__iframe product__iframe--thirt">
-            <video class="iframe">
-              <source src="mp4/3.mp4" type="video/mp4">
-            </video>
-            <span class="product__label">Quality Products</span>
-          </section>
+          <article class="video__wrapper">
+            <section class="product__iframe">
+              <video class="iframe">
+                <source src="mp4/3.mp4" type="video/mp4">
+              </video>
+            </section>
+            <span class="product__label">Innovative Design</span>
+
+          </article>
 
         </section>
 
