--- a/game one-hand bandit/index.html
+++ b/game one-hand bandit/index.html
@@ -44,6 +44,9 @@
     </div>
 
     <script src="Wallet.js"></script>
+    <script src="Statistics.js"></script>
+    <script src="Draw.js"></script>
+    <script src="Result.js"></script>
 
     <script src="Game.js"></script>
 </body>
