--- a/zuperPortfolioPrace/website portfolio/index.html
+++ b/zuperPortfolioPrace/website portfolio/index.html
@@ -29,6 +29,9 @@
 
     <!-- footer -->
     <link rel="stylesheet" href="css/footer.css">
+    <!-- @ media -->
+    <link rel="stylesheet" href="css/extra.css">
+
 </head>
 
 <body>
@@ -37,8 +40,9 @@
 
     <header class="header">
         <!-- navigation -->
-        <div class="logo"></div>
+
         <nav class="nav">
+            <div class="logo"></div>
             <ul class="nav__list">
                 <a href="#">
                     <li class="nav__link">About Me</li>
@@ -59,7 +63,8 @@
         </nav>
         <!-- header section-->
         <section class="header__section">
-            <img src="" alt="Author image" class="header__img">
+            <div class="header__img"> <img src="img/me.jpg" alt="Author image" class="img"></div>
+
             <h1 class="header__h1">Brian Wala</h1>
             <span class="header__specialization">Frontend Developer</span>
             <button class="header__button">Hire me!</button>
