--- a/zuperPortfolioPrace/website portfolio/index.html
+++ b/zuperPortfolioPrace/website portfolio/index.html
@@ -67,7 +67,7 @@
 
             <h1 class="header__h1">Brian Wala</h1>
             <span class="header__specialization">Frontend Developer</span>
-            <button class="header__button">Hire me!</button>
+            <button class="header__button">download resume</button>
         </section>
     </header>
 
@@ -80,10 +80,10 @@
         <section class="main__section main__section--about">
 
             <!-- wrapper 90% of width                                                               -->
-            <section class="main__wrapper">
+            <section class="main__wrapper about">
 
                 <!-- about section 1-->
-                <section class="about">
+                <section class=about__section>
                     <!-- describe wrapper -->
                     <section class="about__describe">
                         <h2 class="about__h2">
