--- a/zuperPortfolioPrace/website portfolio/index.html
+++ b/zuperPortfolioPrace/website portfolio/index.html
@@ -156,7 +156,9 @@
 
                     <!-- skill 1 -->
                     <section class="skill">
-                        <img src="" alt="First degree" class="skill__img">
+                        <div class="skill__img">
+                            <img src="img/degree1.png" alt="First degree" class="img">
+                        </div>
                         <h3 class="skill__h3">Bachelor's degree</h3>
                         <span class="skill__school">New Western College</span>
                         <p class="skill__p">Lorem ipsum dolor sit amlet consecetuadising elit. Fusce grawica weit leo o
@@ -165,7 +167,9 @@
 
                     <!-- skill 2 -->
                     <section class="skill">
-                        <img src="" alt="First degree" class="skill__img">
+                        <div class="skill__img">
+                            <img src="img/degree2.png" alt="First degree" class="img">
+                        </div>
                         <h3 class="skill__h3">Certifications</h3>
                         <span class="skill__school">New Western College</span>
                         <p class="skill__p">Lorem ipsum dolor sit amlet consecetuadising elit. Fusce grawica weit leo o
@@ -174,7 +178,9 @@
 
                     <!-- skill 3 -->
                     <section class="skill">
-                        <img src="" alt="First degree" class="skill__img">
+                        <div class="skill__img">
+                            <img src="img/degree1.png" alt="First degree" class="img">
+                        </div>
                         <h3 class="skill__h3">Master's degree</h3>
                         <span class="skill__school">New Western College</span>
                         <p class="skill__p">Lorem ipsum dolor sit amlet consecetuadising elit. Fusce grawica weit leo o
@@ -191,7 +197,7 @@
 
 
         <!-- main section...                                                                        -->
-        <section class="main__section main__section--skills">
+        <section class="main__section main__section--progress">
             <!-- wrapper 90% of width                                                               -->
             <section class="main__wrapper">
                 <!-- progress section                                                                   -->
