--- a/zuperPortfolioPrace/website portfolio/index.html
+++ b/zuperPortfolioPrace/website portfolio/index.html
@@ -197,7 +197,12 @@
 
 
         <!-- main section...                                                                        -->
+        <!-- paralax progress.css-->
+
         <section class="main__section main__section--progress">
+            <div class="paralax">
+
+            </div>
             <!-- wrapper 90% of width                                                               -->
             <section class="main__wrapper">
                 <!-- progress section                                                                   -->
