--- a/zuperPortfolioPrace/website portfolio/index.html
+++ b/zuperPortfolioPrace/website portfolio/index.html
@@ -256,11 +256,11 @@
                     </section>
                     <!-- project collection -->
                     <section class="projects__album">
-                        <div class="projects__project"></div>
-                        <div class="projects__project"></div>
-                        <div class="projects__project"></div>
-                        <div class="projects__project"></div>
-                        <div class="projects__project"></div>
+                        <article class="projects__project"></article>
+                        <article class="projects__project"></article>
+                        <article class="projects__project"></article>
+                        <article class="projects__project"></article>
+                        <article class="projects__project"></article>
                     </section>
                     <!-- projects section END                                                              -->
                 </section>
@@ -274,7 +274,18 @@
 
 
 
-    <footer class="footer">
+    <footer class="main__section footer">
+        <!-- wrapper 90% of width                                                               -->
+        <section class="main__wrapper">
+
+            <section class="foorer__mailer">
+                <input type="text" class="footer__name">
+                <input type="text" class="footer__email">
+                <input type="text" class="footer__number">
+                <input type="text" class="footer__message">
+                <input type="submit" class="footer__submit">
+            </section>
+        </section>
 
     </footer>
 
