--- a/zuperPortfolioPrace/website portfolio/index.html
+++ b/zuperPortfolioPrace/website portfolio/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Brian Wala - portfolio</title>
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- variables, body -->
     <link rel="stylesheet" href="css/start.css">
 
@@ -43,6 +45,7 @@
 
         <nav class="nav">
             <div class="logo"></div>
+
             <ul class="nav__list">
                 <a href="#">
                     <li class="nav__link">About Me</li>
@@ -209,25 +212,25 @@
                 <section class="progress">
                     <!-- circle progress bar section 1-->
                     <section class="progress__technology">
-                        <div class="progress__circle">33%</div>
+                        <div class="progress__circle">33% <i class="fas fa-hand-pointer pointer"></i> </div>
                         <span class="progress__label">HTML/CSS</span>
                     </section>
 
                     <!-- circle progress bar section 2-->
                     <section class="progress__technology">
-                        <div class="progress__circle">33%</div>
+                        <div class="progress__circle">33% <i class="fas fa-hand-pointer pointer"></i> </div>
                         <span class="progress__label">JS</span>
                     </section>
 
                     <!-- circle progress bar section 3-->
                     <section class="progress__technology">
-                        <div class="progress__circle">33%</div>
+                        <div class="progress__circle">33% <i class="fas fa-hand-pointer pointer"></i> </div>
                         <span class="progress__label">React</span>
                     </section>
 
                     <!-- circle progress bar section 3-->
                     <section class="progress__technology">
-                        <div class="progress__circle">33%</div>
+                        <div class="progress__circle">33% <i class="fas fa-hand-pointer pointer"></i> </div>
                         <span class="progress__label">Node</span>
                     </section>
                     <!-- progress section END                                                              -->
@@ -274,10 +277,10 @@
 
 
 
-    <footer class="main__section footer">
+    <footer class="main__section main__section--footer">
         <!-- wrapper 90% of width                                                               -->
         <section class="main__wrapper">
-
+            <section> </section>
             <section class="foorer__mailer">
                 <input type="text" class="footer__name">
                 <input type="text" class="footer__email">
