--- a/zuperPortfolioPrace/website portfolio/index.html
+++ b/zuperPortfolioPrace/website portfolio/index.html
@@ -212,26 +212,26 @@
                 <section class="progress">
                     <!-- circle progress bar section 1-->
                     <section class="progress__technology">
-                        <div class="progress__circle">33% <i class="fas fa-hand-pointer pointer"></i> </div>
-                        <span class="progress__label">HTML/CSS</span>
+                        <div class="progress__circle">33% </div>
+                        <span class="progress__label">HTML/CSS <i class="fas fa-hand-pointer pointer"></i> </span>
                     </section>
 
                     <!-- circle progress bar section 2-->
                     <section class="progress__technology">
-                        <div class="progress__circle">33% <i class="fas fa-hand-pointer pointer"></i> </div>
-                        <span class="progress__label">JS</span>
+                        <div class="progress__circle">33% </div>
+                        <span class="progress__label">JS <i class="fas fa-hand-pointer pointer"></i> </span>
                     </section>
 
                     <!-- circle progress bar section 3-->
                     <section class="progress__technology">
-                        <div class="progress__circle">33% <i class="fas fa-hand-pointer pointer"></i> </div>
-                        <span class="progress__label">React</span>
+                        <div class="progress__circle">33% </div>
+                        <span class="progress__label">React <i class="fas fa-hand-pointer pointer"></i> </span>
                     </section>
 
                     <!-- circle progress bar section 3-->
                     <section class="progress__technology">
-                        <div class="progress__circle">33% <i class="fas fa-hand-pointer pointer"></i> </div>
-                        <span class="progress__label">Node</span>
+                        <div class="progress__circle">33% </div>
+                        <span class="progress__label">Node <i class="fas fa-hand-pointer pointer"></i> </span>
                     </section>
                     <!-- progress section END                                                              -->
                 </section>
