--- a/zuperPortfolioPrace/website portfolio/index.html
+++ b/zuperPortfolioPrace/website portfolio/index.html
@@ -246,27 +246,29 @@
         <!-- main section...                                                                        -->
         <section class="main__section main__section--projects">
             <!-- wrapper 90% of width                                                               -->
-            <section class="main__wrapper">
-                <!-- projects section                                                                   -->
-                <section class="projects">
-                    <!-- filters -->
-                    <section class="projects__filters">
-                        <span class="projects__filter">All</span>
-                        <span class="projects__filter">HTML/CSS</span>
-                        <span class="projects__filter">JS</span>
-                        <span class="projects__filter">React</span>
-                        <span class="projects__filter">Node</span>
-                    </section>
-                    <!-- project collection -->
-                    <section class="projects__album">
-                        <article class="projects__project"></article>
-                        <article class="projects__project"></article>
-                        <article class="projects__project"></article>
-                        <article class="projects__project"></article>
-                        <article class="projects__project"></article>
-                    </section>
-                    <!-- projects section END                                                              -->
+            <!-- projects section                                                                   -->
+            <section class="main__wrapper projects">
+                <!-- filters -->
+                <section class="projects__filters">
+                    <span class="projects__filter">All</span>
+                    <span class="projects__filter">/</span>
+                    <span class="projects__filter">HTML - CSS</span>
+                    <span class="projects__filter">/</span>
+                    <span class="projects__filter">JS</span>
+                    <span class="projects__filter">/</span>
+                    <span class="projects__filter">React</span>
+                    <span class="projects__filter">/</span>
+                    <span class="projects__filter">Node</span>
                 </section>
+                <!-- project collection -->
+                <section class="projects__album">
+                    <article class="projects__project projects__project--first"></article>
+                    <article class="projects__project projects__project--second"></article>
+                    <article class="projects__project projects__project--thirt"></article>
+                    <article class="projects__project projects__project--fourth"></article>
+                    <article class="projects__project projects__project--fifth"></article>
+                </section>
+                <!-- projects section END                                                              -->
 
                 <!-- wrapper 90% END                                                                   -->
             </section>
@@ -279,14 +281,38 @@
 
     <footer class="main__section main__section--footer">
         <!-- wrapper 90% of width                                                               -->
-        <section class="main__wrapper">
-            <section> </section>
-            <section class="foorer__mailer">
-                <input type="text" class="footer__name">
-                <input type="text" class="footer__email">
-                <input type="text" class="footer__number">
-                <input type="text" class="footer__message">
-                <input type="submit" class="footer__submit">
+        <section class="main__wrapper footer">
+            <section class="footer__contact">
+                <address class="footer__adress">
+                    <section class="footer__wrapper footer__wrapper--me">
+                        <div class="footer__img">
+                            <img src="img/me.jpg" alt="Author image" class="img">
+                        </div>
+                        <div class="footer__me">
+                            <h3 class="footer__h3">Brian Wala</h3>
+                            <span class="footer__specialization">Frontend Developer</span>
+                        </div>
+                    </section>
+                    <span class="footer__number">+48 662-212-779</span>
+                    <span class="footer__email">brianwala22@gmail.com</span>
+
+                    <button class="footer__button">Codepen</button>
+                    <section class="footer__wrapper footer__wrapper--media">
+                        <div class="footer__media footer__media--fb"></div>
+                        <div class="footer__media footer__media--tweeter"></div>
+                        <div class="footer__media footer__media--github"></div>
+                        <div class="footer__media footer__media--code"></div>
+                        <div class="footer__media footer__media--google"></div>
+                    </section>
+
+                </address>
+            </section>
+            <section class="footer__mailer">
+                <input placeholder="Full Name" type="text" class="footer__input footer__name">
+                <input placeholder="Email" type="text" class="footer__input footer__email">
+                <input placeholder="Number" type="text" class="footer__input footer__number">
+                <input placeholder="Write your Message here..." type="text" class="footer__input footer__message">
+                <input type="submit" class="footer__input footer__submit">
             </section>
         </section>
 
