--- a/zuperPortfolioPrace/website portfolio/index.html
+++ b/zuperPortfolioPrace/website portfolio/index.html
@@ -267,6 +267,8 @@
                     <article class="projects__project projects__project--thirt"></article>
                     <article class="projects__project projects__project--fourth"></article>
                     <article class="projects__project projects__project--fifth"></article>
+                    <article class="projects__project projects__project--sixth"></article>
+
                 </section>
                 <!-- projects section END                                                              -->
 
