--- a/zuperPortfolioPrace/website portfolio/index.html
+++ b/zuperPortfolioPrace/website portfolio/index.html
@@ -341,7 +341,7 @@
                 <input placeholder="Email" type="text" class="footer__input footer__email">
                 <input placeholder="Number" type="text" class="footer__input footer__number">
                 <input placeholder="Write your Message here..." type="text" class="footer__input footer__message">
-                <input type="submit" class="footer__input footer__submit">
+                <input value="SUBMIT" ype="submit" class="footer__input footer__submit">
             </section>
         </section>
 
