--- a/zuperPortfolioPrace/website portfolio/index.html
+++ b/zuperPortfolioPrace/website portfolio/index.html
@@ -276,25 +276,44 @@
                 <section class="projects__album">
                     <article class="projects__project projects__project--first">
                         <iframe scrolling="no" class="project__iframe" src="https://sajrus33.github.io/Flubmaster-web/"
-                            frameborder="0"></iframe>
+                            data-code="https://github.com/sajrus33/TowerDefence" frameborder="0"></iframe>
+                        <div class="project__code"><i class="fas fa-code project__ico project__ico--code"></i></div>
+                        <div class="project__check"><i class="fas fa-eye project__ico project__ico--check"></i></div>
                     </article>
                     <article class="projects__project projects__project--second">
-                        <iframe scrolling="no" class="project__iframe"
-                            src="https://sajrus33.github.io/TowerDefence/index.html" frameborder="0"></iframe>
+                        <iframe scrolling="no" class="project__iframe" src="https://sajrus33.github.io/Escape-Layout/"
+                            data-code="https://github.com/sajrus33/Learn/tree/master/zuperPortfolioPrace/website%20escape"
+                            frameborder="0"></iframe>
+                        <div class="project__code"><i class="fas fa-code project__ico project__ico--code"></i></div>
+                        <div class="project__check"><i class="fas fa-eye project__ico project__ico--check"></i></div>
                     </article>
                     <article class="projects__project projects__project--thirt">
                         <iframe scrolling="no" class="project__iframe"
-                            src="https://sajrus33.github.io/App-ToDo/index.html" frameborder="0"></iframe>
+                            src="https://sajrus33.github.io/App-ToDo/index.html"
+                            data-code="https://github.com/sajrus33/App-ToDo" frameborder="0"></iframe>
+                        <div class="project__code"><i class="fas fa-code project__ico project__ico--code"></i></div>
+                        <div class="project__check"><i class="fas fa-eye project__ico project__ico--check"></i></div>
                     </article>
                     <article class="projects__project projects__project--fourth">
                         <iframe scrolling="no" class="project__iframe" src="https://sajrus33.github.io/Escape-Layout/"
-                            frameborder="0"></iframe>https://sajrus33.github.io/Card-game-prototype/
+                            data-code="https://github.com/sajrus33/Portfolio" frameborder="0"></iframe>
+                        <div class="project__code"><i class="fas fa-code project__ico project__ico--code"></i></div>
+                        <div class="project__check"><i class="fas fa-eye project__ico project__ico--check"></i></div>
                     </article>
                     <article class="projects__project projects__project--fifth">
                         <iframe scrolling="no" class="project__iframe"
-                            src="https://sajrus33.github.io/Card-game-prototype/" frameborder="0"></iframe>
+                            src="https://sajrus33.github.io/Card-game-prototype/"
+                            data-code="https://github.com/sajrus33/Card-game-prototype" frameborder="0"></iframe>
+                        <div class="project__code"><i class="fas fa-code project__ico project__ico--code"></i></div>
+                        <div class="project__check"><i class="fas fa-eye project__ico project__ico--check"></i></div>
                     </article>
-                    <article class="projects__project projects__project--sixth"></article>
+                    <article class="projects__project projects__project--sixth">
+                        <iframe scrolling="no" class="project__iframe" src="https://sajrus33.github.io/Flubmaster-web/"
+                            data-code="https://github.com/sajrus33/Learn/tree/master/zuperPortfolioPrace/Flubmaster"
+                            frameborder="0"></iframe>
+                        <div class="project__code"><i class="fas fa-code project__ico project__ico--code"></i></div>
+                        <div class="project__check"><i class="fas fa-eye project__ico project__ico--check"></i></div>
+                    </article>
 
                 </section>
                 <!-- projects section END                                                              -->
