Portfolio nav hamb
..

--- a/myProjects/website portfolio/index.html
+++ b/myProjects/website portfolio/index.html
@@ -63,23 +63,31 @@
                     <li class="nav__link nav__link--footer">Contact Me</li>
                 </a>
             </ul>
-            <ul class="ham__list hide">
-                <a href="#">
-                    <li class="ham__link ham__link--about">About Me</li>
-                </a>
-                <a href="#">
-                    <li class="ham__link ham__link--skills">My Education</li>
-                </a>
-                <a href="#">
-                    <li class="ham__link nav__link--progress">My Skills</li>
-                </a>
-                <a href="#">
-                    <li class="ham__link ham__link--projects">My Portfollio</li>
-                </a>
-                <a href="#">
-                    <li class="ham__link ham__link--footer">Contact Me</li>
-                </a>
-            </ul>
+            <nav class="nav--ham hide">
+                <div class="ham">
+                    <span class="ham__bar ham__bar--first"></span>
+                    <span class="ham__bar ham__bar--second"></span>
+                    <span class="ham__bar ham__bar--thirt"></span>
+                </div>
+                <ul class="ham__list hide">
+                    <a href="#">
+                        <li class="ham__link ham__link--about">About Me</li>
+                    </a>
+                    <a href="#">
+                        <li class="ham__link ham__link--skills">My Education</li>
+                    </a>
+                    <a href="#">
+                        <li class="ham__link nav__link--progress">My Skills</li>
+                    </a>
+                    <a href="#">
+                        <li class="ham__link ham__link--projects">My Portfollio</li>
+                    </a>
+                    <a href="#">
+                        <li class="ham__link ham__link--footer">Contact Me</li>
+                    </a>
+                </ul>
+            </nav>
+
         </nav>
         <!-- header section-->
         <section class="header__section">
