--- a/myProjects/website portfolio/index.html
+++ b/myProjects/website portfolio/index.html
@@ -63,13 +63,13 @@
                     <li class="nav__link nav__link--footer">Contact Me</li>
                 </a>
             </ul>
-            <nav class="nav--ham hide">
-                <div class="ham">
+            <nav class="nav--ham">
+                <div class="ham--closed">
                     <span class="ham__bar ham__bar--first"></span>
                     <span class="ham__bar ham__bar--second"></span>
                     <span class="ham__bar ham__bar--thirt"></span>
                 </div>
-                <ul class="ham__list hide">
+                <ul class="ham__list">
                     <a href="#">
                         <li class="ham__link ham__link--about">About Me</li>
                     </a>
