--- a/myProjects/website portfolio/index.html
+++ b/myProjects/website portfolio/index.html
@@ -64,25 +64,25 @@
                 </a>
             </ul>
             <nav class="nav--ham">
-                <div class="ham--closed">
+                <div class="ham">
                     <span class="ham__bar ham__bar--first"></span>
                     <span class="ham__bar ham__bar--second"></span>
                     <span class="ham__bar ham__bar--thirt"></span>
                 </div>
                 <ul class="ham__list">
-                    <a href="#">
+                    <a class="ham__a" href="#">
                         <li class="ham__link ham__link--about">About Me</li>
                     </a>
-                    <a href="#">
+                    <a class="ham__a" href="#">
                         <li class="ham__link ham__link--skills">My Education</li>
                     </a>
-                    <a href="#">
+                    <a class="ham__a" href="#">
                         <li class="ham__link nav__link--progress">My Skills</li>
                     </a>
-                    <a href="#">
+                    <a class="ham__a" href="#">
                         <li class="ham__link ham__link--projects">My Portfollio</li>
                     </a>
-                    <a href="#">
+                    <a class="ham__a" href="#">
                         <li class="ham__link ham__link--footer">Contact Me</li>
                     </a>
                 </ul>
@@ -353,8 +353,10 @@
     <footer class="main__section main__section--footer">
         <!-- wrapper 90% of width                                                               -->
         <section class="main__wrapper footer">
+
             <section class="footer__contact">
                 <address class="footer__adress">
+
                     <section class="footer__wrapper footer__wrapper--me">
                         <div class="footer__img">
                             <img src="img/me.jpg" alt="Author image" class="img">
@@ -364,8 +366,9 @@
                             <span class="footer__specialization">Frontend Developer</span>
                         </div>
                     </section>
-                    <span class="footer__number">+48 662-212-779</span>
-                    <span class="footer__email">brianwala22@gmail.com</span>
+
+                    <div class="footer__myNumber">+48 662-212-779</div>
+                    <div class="footer__myEmail">brianwala22@gmail.com</div>
 
                     <button class="footer__button">Codepen</button>
                     <section class="footer__wrapper footer__wrapper--media">
@@ -375,15 +378,15 @@
                         <div class="footer__media footer__media--code"></div>
                         <div class="footer__media footer__media--google"></div>
                     </section>
-
                 </address>
             </section>
+
             <section class="footer__mailer">
                 <input placeholder="Full Name" type="text" class="footer__input footer__name">
                 <input placeholder="Email" type="text" class="footer__input footer__email">
                 <input placeholder="Number" type="text" class="footer__input footer__number">
                 <input placeholder="Write your Message here..." type="text" class="footer__input footer__message">
-                <input value="SUBMIT" ype="submit" class="footer__input footer__submit">
+                <input value="SUBMIT" type="submit" class="footer__input footer__submit">
             </section>
         </section>
 
