--- a/myProjects/website portfolio/index.html
+++ b/myProjects/website portfolio/index.html
@@ -184,6 +184,7 @@
 
                     <!-- skill 1 -->
                     <section class="skill">
+                        <div id="progress"> </div>
                         <div class="skill__img">
                             <img src="img/degree1.png" alt="First degree" class="img">
                         </div>
@@ -373,7 +374,6 @@
                     <button class="footer__button">Codepen</button>
                     <section class="footer__wrapper footer__wrapper--media">
                         <div class="footer__media footer__media--fb"></div>
-                        <div class="footer__media footer__media--tweeter"></div>
                         <div class="footer__media footer__media--github"></div>
                         <div class="footer__media footer__media--code"></div>
                         <div class="footer__media footer__media--google"></div>
