--- a/myProjects/Flubmaster/index.html
+++ b/myProjects/Flubmaster/index.html
@@ -11,13 +11,8 @@
 
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
   <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-  <link rel="stylesheet" href="css/header.css" />
-  <link rel="stylesheet" href="css/products.css" />
-  <link rel="stylesheet" href="css/products3.css" />
-  <link rel="stylesheet" href="css/weDo.css" />
-  <link rel="stylesheet" href="css/about.css" />
-  <link rel="stylesheet" href="css/footer.css" />
-  <link rel="stylesheet" href="css/extra.css" />
+  <link rel="stylesheet" href="css/index.css" />
+
 
 
 </head>
