--- a/myProjects/website portfolio/index.html
+++ b/myProjects/website portfolio/index.html
@@ -165,7 +165,7 @@
                 <section class="skills">
 
                     <!-- skill 1 -->
-                    <section class="skill">
+                    <section class="skill skill--first">
                         <div id="progress"> </div>
                         <div class="skill__img">
                             <img src="img/degree1.png" alt="First degree" class="img">
