--- a/myProjects/website portfolio/index.html
+++ b/myProjects/website portfolio/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- variables, body -->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css2/index.css">
 
 </head>
 
@@ -233,7 +233,7 @@
                     <!-- circle progress bar section 3-->
                     <section class="progress__technology">
                         <div class="progress__circle"><canvas class="progress__canvas"></canvas> </div>
-                        <span class="progress__label">Npm<i class="fas fa-hand-pointer pointer"></i> </span>
+                        <span class="progress__label">Node JS<i class="fas fa-hand-pointer pointer"></i> </span>
                     </section>
 
                     <!-- circle progress bar section 3-->
@@ -265,22 +265,22 @@
                 <section class="projects__filters">
                     <span class="projects__filter"><a class="projects__link" href="#">All</a></span>
 
-                    <span class="projects__filter">/</span>
+                    <span class="projects__filter projects__filter--slash">/</span>
 
                     <span class="projects__filter"><a class="projects__link" href="#">HTML - CSS</a></span>
 
 
-                    <span class="projects__filter">/</span>
+                    <span class="projects__filter projects__filter--slash">/</span>
                     <span class="projects__filter"><a class="projects__link" href="#">JS</a></span>
 
 
 
-                    <span class="projects__filter">/</span>
+                    <span class="projects__filter projects__filter--slash">/</span>
                     <span class="projects__filter"><a class="projects__link" href="#">Node</a></span>
 
 
 
-                    <span class="projects__filter">/</span>
+                    <span class="projects__filter projects__filter--slash">/</span>
                     <span class="projects__filter"><a class="projects__link" href="#">React</a></span>
 
 
