--- a/myProjects/website portfolio/index.html
+++ b/myProjects/website portfolio/index.html
@@ -77,7 +77,7 @@
 
             <h1 class="header__h1">Brian Wala</h1>
             <span class="header__specialization">Frontend Developer</span>
-            <button class="header__button">download resume</button>
+            <button class="header__button">Hire me!</button>
         </section>
     </header>
 
@@ -100,12 +100,13 @@
                             <span class="about__number about__number--yellow">01.</span> Passion
                         </h2>
                         <p class="about__p">
-                            Lore ipsum doloro sit armet. Constructo alipi atli. Donec molls anols solitud.
+                            Creating is my biggest passion. I like to write my own Vanilla scripts, instead of using
+                            freamworks.
                         </p>
                     </section>
                     <!-- note wrapper -->
                     <div class="about__note about__note--yellow">
-                        <div class="about__amount about__amount--nights">122</div>
+                        <div class="about__amount about__amount--nights">101</div>
                         <div class="about__label">Sleepless Nights</div>
                     </div>
                     <!-- about section END -->
@@ -115,7 +116,7 @@
                 <section class="about__section">
                     <!-- note wrapper -->
                     <div class="about__note about__note--blue">
-                        <div class="about__amount about__amount--certifications">5</div>
+                        <div class="about__amount about__amount--certifications">2</div>
                         <div class="about__label"> Certifications</div>
                     </div>
                     <!-- describe wrapper -->
@@ -124,7 +125,7 @@
                             <span class="about__number about__number--blue">02.</span> Knowledge
                         </h2>
                         <p class="about__p">
-                            Lore ipsum doloro sit armet. Constructo alipi atli. Donec molls anols solitud.
+                            My knowledge about frontend development is based on documentations and courses.
                         </p>
                     </section>
                     <!-- about section END -->
@@ -135,15 +136,16 @@
                     <!-- describe wrapper -->
                     <section class="about__describe">
                         <h2 class="about__h2">
-                            <span class="about__number about__number--green">03.</span> Passion
+                            <span class="about__number about__number--green">03.</span> Experience
                         </h2>
                         <p class="about__p">
-                            Lore ipsum doloro sit armet. Constructo alipi atli. Donec molls anols solitud.
+                            I'm aware of that, knowledge coming with experience. That's why I do
+                            a lot of projects.
                         </p>
                     </section>
                     <!-- note wrapper -->
                     <div class="about__note about__note--green">
-                        <div class="about__amount about__amount--projects">232</div>
+                        <div class="about__amount about__amount--projects">8</div>
                         <div class="about__label">Projects</div>
                     </div>
 
@@ -170,10 +172,9 @@
                         <div class="skill__img">
                             <img src="img/degree1.png" alt="First degree" class="img">
                         </div>
-                        <h3 class="skill__h3">Bachelor's degree</h3>
-                        <span class="skill__school">New Western College</span>
-                        <p class="skill__p">Lorem ipsum dolor sit amlet consecetuadising elit. Fusce grawica weit leo o
-                            com erfi omare di.</p>
+                        <h3 class="skill__h3">High School</h3>
+                        <span class="skill__school">I Liceum Ogólnokształcące w Wodzisław Śląski</span>
+                        <p class="skill__p">Mathematics - Physics - Informatics profile, graduated 2014.</p>
                     </section>
 
                     <!-- skill 2 -->
@@ -181,10 +182,9 @@
                         <div class="skill__img">
                             <img src="img/degree2.png" alt="First degree" class="img">
                         </div>
-                        <h3 class="skill__h3">Certifications</h3>
-                        <span class="skill__school">New Western College</span>
-                        <p class="skill__p">Lorem ipsum dolor sit amlet consecetuadising elit. Fusce grawica weit leo o
-                            com erfi omare di.</p>
+                        <h3 class="skill__h3">Polytechnic</h3>
+                        <span class="skill__school">Politechnika Opolska</span>
+                        <p class="skill__p">Logistics profile, ended up quitting 2018.</p>
                     </section>
 
                     <!-- skill 3 -->
@@ -192,10 +192,9 @@
                         <div class="skill__img">
                             <img src="img/degree3.png" alt="First degree" class="img">
                         </div>
-                        <h3 class="skill__h3">Master's degree</h3>
-                        <span class="skill__school">New Western College</span>
-                        <p class="skill__p">Lorem ipsum dolor sit amlet consecetuadising elit. Fusce grawica weit leo o
-                            com erfi omare di.</p>
+                        <h3 class="skill__h3">Certifications</h3>
+                        <span class="skill__school">Udemy</span>
+                        <p class="skill__p">Advanced HTML/CSS 38h course. Javascript 37h course.</p>
                     </section>
 
                     <!-- skill section END                                                                    -->
@@ -355,10 +354,12 @@
                         </div>
                     </section>
 
-                    <div class="footer__myNumber"><i class="fas fa-mobile-alt"></i>+48 662-212-779</div>
-                    <div class="footer__myEmail"><i class="fas fa-envelope"></i> brianwala22@gmail.com</div>
+                    <div class="footer__myNumber"><i class="fas fa-mobile-alt footer__ico footer__ico--contact"></i>+48
+                        662-212-779</div>
+                    <div class="footer__myEmail"><i
+                            class="fas fa-envelope footer__ico footer__ico--contact"></i>brianwala22@gmail.com</div>
 
-                    <button class="footer__button">Codepen</button>
+                    <button class="footer__button">Copy Email</button>
                     <section class="footer__wrapper footer__wrapper--media">
                         <div class="footer__media footer__media--first footer__media--fb"><i
                                 class="fab fa-facebook-f footer__ico footer__ico--fb"></i>
@@ -386,7 +387,7 @@
         </section>
 
     </footer>
-
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
     <script src="ProgressCircle.js"></script>
     <script src="script.js"></script>
 
