--- a/myProjects/website portfolio/index.html
+++ b/myProjects/website portfolio/index.html
@@ -247,6 +247,7 @@
                         <div class="progress__circle"><canvas class="progress__canvas"></canvas> </div>
                         <span class="progress__label">PHP<i class="fas fa-hand-pointer pointer"></i> </span>
                     </section>
+                    <section class="progress__describe"></section>
                     <!-- progress section END                                                              -->
                 </section>
 
@@ -393,8 +394,9 @@
                 <input placeholder="Full Name" type="text" class="footer__input footer__name">
                 <input placeholder="Email" type="text" class="footer__input footer__email">
                 <input placeholder="Phone Number" type="text" class="footer__input footer__number">
-                <input placeholder="Write your Message here..." type="text" class="footer__input footer__message">
-                <input value="SUBMIT" type="submit" class="footer__input footer__submit">
+                <textarea placeholder="Write your Message here..." type="text"
+                    class="footer__input footer__message"></textarea>
+                <input value="SEND MESSAGE" type="submit" class="footer__input footer__submit">
             </section>
         </section>
 
