--- a/myProjects/game memory cards/index.html
+++ b/myProjects/game memory cards/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>6</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/css/style.css">
+
 </head>
 
 <body>
 
 
-    <script src="script.js"></script>
+    <script type="module" src="public/src/Game.js"></script>
 </body>
 
 </html>
